# fastapi_zip_deps

./: .gitignore  Dockerfile  create_layer.sh  pyproject.toml
fastapi_zip_deps/: main.py
